force-app/main/default/objects/SafeDeleteRule__mdt/SafeDeleteRule__mdt.object-meta.xml
<CustomObject>
    <description>Metadata rules that tune SafeDelete Explorer child relationship presentation and risk highlighting.</description>
    <label>Safe Delete Rule</label>
    <pluralLabel>Safe Delete Rules</pluralLabel>
</CustomObject>