force-app/main/default/objects/SafeDeleteRule__mdt/fields/Behavior__c.field-meta.xml
<CustomField>
    <fullName>Behavior__c</fullName>
    <description>Controls how the child object is treated in SafeDelete Explorer.</description>
    <label>Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
                <default>true</default>
                <label>Auto</label>
            </value>
            <value>
                <fullName>Include</fullName>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
            <value>
                <fullName>HighRisk</fullName>
                <label>High Risk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>