force-app/main/default/objects/SafeDeleteRule__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Optional category label shown in the UI.</description>
    <label>Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>