force-app/main/default/objects/SafeDeleteRule__mdt/fields/ChildObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ChildObjectApiName__c</fullName>
    <description>API name of the child object targeted by this rule.</description>
    <label>Child Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>