force-app/main/default/objects/SafeDeleteRule__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Optional note shown in the UI for the targeted child object.</description>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>